--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Portfólio</title>
 </head>
@@ -49,6 +50,10 @@
         <div class="rodape">
             <img class="rodape-logo" src="/imagens/logo-principal.png" alt="Minha Logo">
         </div>
-    </footer> 
+    </footer>
+
+    <script src="/javascript/app.js"></script>
+
+    <script src="/javascript/app2.js"></script>
 </body>
 </html>
