Estruturando conteúdo secudário

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                     <div class="conteudo-principal-apresentacao-um-texto-ocupacao">DESENVOLVEDOR WEB FULLSTACK</div>
                 </h1>
                 <div class="conteudo-principal-apresentacao-um-logos">
-                    <button class="conteudo-principal-apresentacao-um-logos-botao"><img class="conteudo-principal-apresentacao-um-logos-botao-logo" src="/imagens/logo-linkedin.png" alt="Logo Linkedin"></button>
-                    <button class="conteudo-principal-apresentacao-um-logos-botao"><img class="conteudo-principal-apresentacao-um-logos-botao-logo" src="/imagens/logo-github.png" alt="Logo Github"></button>
-                    <button class="conteudo-principal-apresentacao-um-logos-botao"><img class="conteudo-principal-apresentacao-um-logos-botao-logo" src="/imagens/logo-download.png" alt="Logo Download"></button>
+                    <a class="conteudo-principal-apresentacao-um-logos-botao" href="https://www.linkedin.com/in/luizfnds/" target="_blank"><img class="conteudo-principal-apresentacao-um-logos-botao-logo" src="/imagens/logo-linkedin.png"></a>
+                    <a class="conteudo-principal-apresentacao-um-logos-botao" href="https://github.com/Luizfnds" target="_blank"><img class="conteudo-principal-apresentacao-um-logos-botao-logo" src="/imagens/logo-github.png"></a>
+                    <a class="conteudo-principal-apresentacao-um-logos-botao" href="downloads/Curriculo-2022.2.pdf" download="Curriculo-2022.pdf" type="application/pdf"><img class="conteudo-principal-apresentacao-um-logos-botao-logo" src="/imagens/logo-download.png"></a>
                 </div>
             </div>
             <div class="conteudo-principal-apresentacao-dois">
@@ -42,7 +42,16 @@
             </div>
         </section>    
         <section id="conteudo-secundario">
-            <h3 class="conteudo-secundario-titulo">PROJETOS<h3>
+            <div class="conteudo-secundario">
+                <h3 class="conteudo-secundario-titulo">PROJETOS</h3>
+                <div class="conteudo-secundario-projetos">
+                    <img class="imagem-teste" src="imagens/imagem-teste.png"></img>
+                    <div class="conteudo-secundario-projetos-um"></div>
+                </div>
+            </div>
+        </section>
+        <section id="conteudo-terciario">
+
         </section>
     </main>
     
