--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <title>Portfólio</title>
 </head>
+
 <body>
     <header id="cabecalho">
         <div class="cabecalho">
@@ -17,12 +22,13 @@
             <nav class="cabecalho-menu">
                 <a class="cabecalho-menu-item" href="#conteudo-principal">INICIO</a>
                 <a class="cabecalho-menu-item" href="#conteudo-secundario">MEUS PROJETOS</a>
-                <a class="cabecalho-menu-item" href="#conteudo-">HABILIDADES</a>
+                <a class="cabecalho-menu-item" href="#conteudo-terciario">HABILIDADES</a>
             </nav>
         </div>
     </header>
 
     <main id="conteudo">
+
         <section id="conteudo-principal">
             <div class="conteudo-principal-apresentacao-um">
                 <h1 class="conteudo-principal-apresentacao-um-texto">
@@ -30,82 +36,109 @@
                     <div class="conteudo-principal-apresentacao-um-texto-ocupacao">DESENVOLVEDOR WEB FULLSTACK</div>
                 </h1>
                 <div class="conteudo-principal-apresentacao-um-logos">
-                    <a class="conteudo-principal-apresentacao-um-logos-botao" href="https://www.linkedin.com/in/luizfnds/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a class="conteudo-principal-apresentacao-um-logos-botao" href="https://github.com/Luizfnds" target="_blank"><i class="fa-brands fa-github"></i></a>
-                    <a class="conteudo-principal-apresentacao-um-logos-botao" href="downloads/Curriculo-2022.2.pdf" download="Curriculo-2022.pdf" type="application/pdf"><i class="fa-solid fa-file-arrow-down"></i></a>
+                    <a class="conteudo-principal-apresentacao-um-logos-botao"
+                        href="https://www.linkedin.com/in/luizfnds/" target="_blank"><i
+                            class="fa-brands fa-linkedin-in"></i></a>
+                    <a class="conteudo-principal-apresentacao-um-logos-botao" href="https://github.com/Luizfnds"
+                        target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a class="conteudo-principal-apresentacao-um-logos-botao" href="downloads/Curriculo-2022.2.pdf"
+                        download="Curriculo-2022.pdf" type="application/pdf"><i
+                            class="fa-solid fa-file-arrow-down"></i></a>
                 </div>
             </div>
             <div class="conteudo-principal-apresentacao-dois">
                 <img class="conteudo-principal-apresentacao-dois-retrato" src="imagens/retrato.png">
                 <h2 class="conteudo-principal-apresentacao-dois-titulo">Sobre mim</h2>
                 <p class="conteudo-principal-apresentacao-dois-texto">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur.
                 </p>
             </div>
-        </section>    
+        </section>
+
         <section id="conteudo-secundario">
             <div class="swiper mySwiper conteudo-secundario">
                 <div class="conteudo-secundario-titulo">MEUS PROJETOS</div>
                 <div class="swiper-wrapper conteudo-secundario-projetos">
-
-                    <div class="swiper-slide conteudo-secundario-projetos-um">
-                            <img class="conteudo-secundario-projetos-um-imagem" src="imagens/imagem-teste.png">
-                            <div class="conteudo-secundario-projetos-um-conteudo">
-                                <div class="conteudo-secundario-projetos-um-conteudo-um">
-                                    <h4 class="conteudo-secundario-projetos-um-conteudo-um-titulo">Descrição</h4>
-                                    <p class="conteudo-secundario-projetos-um-conteudo-um-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                    <p></p>
-                                </div>
-                                <div class="conteudo-secundario-projetos-um-conteudo-dois">
-                                    <h4 class="conteudo-secundario-projetos-um-conteudo-dois-titulo">Links</h4>
-                                    <div class="conteudo-secundario-projetos-um-conteudo-dois-botoess">
-                                        <button class="conteudo-secundario-projetos-um-conteudo-dois-botoes"><i class="fa-solid fa-code"></i>Código fonte</button>
-                                        <button class="conteudo-secundario-projetos-um-conteudo-dois-botoes"><i class="fa-solid fa-file"></i>Documentação</button>
-                                    </div>
-                                </div>
-                            </div>                        
-                    </div>
-                    <div class="swiper-slide conteudo-secundario-projetos-um">
-                        <img class="conteudo-secundario-projetos-um-imagem" src="imagens/imagem-teste1.png">
-                        <div class="conteudo-secundario-projetos-um-conteudo">
-                            <div class="conteudo-secundario-projetos-um-conteudo-um">
-                                <h4 class="conteudo-secundario-projetos-um-conteudo-um-titulo">Descrição</h4>
-                                <p class="conteudo-secundario-projetos-um-conteudo-um-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <div class="swiper-slide conteudo-secundario-projetos-slide">
+                        <img class="conteudo-secundario-projetos-slide-imagem" src="imagens/imagem-teste.png">
+                        <div class="conteudo-secundario-projetos-slide-conteudo">
+                            <div class="conteudo-secundario-projetos-slide-conteudo-um">
+                                <h4 class="conteudo-secundario-projetos-slide-conteudo-um-titulo">Descrição</h4>
+                                <p class="conteudo-secundario-projetos-slide-conteudo-um-texto">Lorem ipsum dolor sit
+                                    amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                                 <p></p>
                             </div>
-                            <div class="conteudo-secundario-projetos-um-conteudo-dois">
-                                <h4 class="conteudo-secundario-projetos-um-conteudo-dois-titulo">Links</h4>
-                                <div class="conteudo-secundario-projetos-um-conteudo-dois-botoess">
-                                    <button class="conteudo-secundario-projetos-um-conteudo-dois-botoes"><i class="fa-solid fa-code"></i>Código fonte</button>
-                                    <button class="conteudo-secundario-projetos-um-conteudo-dois-botoes"><i class="fa-solid fa-file"></i>Documentação</button>
+                            <div class="conteudo-secundario-projetos-slide-conteudo-dois">
+                                <h4 class="conteudo-secundario-projetos-slide-conteudo-dois-titulo">Links</h4>
+                                <div class="conteudo-secundario-projetos-slide-conteudo-dois-botoess">
+                                    <button class="conteudo-secundario-projetos-slide-conteudo-dois-botoes"><i
+                                            class="fa-solid fa-code"></i>Código fonte</button>
+                                    <button class="conteudo-secundario-projetos-slide-conteudo-dois-botoes"><i
+                                            class="fa-solid fa-file"></i>Documentação</button>
                                 </div>
                             </div>
-                        </div>                        
-                </div>
-                    <div class="swiper-slide conteudo-secundario-projetos-dois">
-                            <img class="conteudo-secundario-projetos-dois-imagem" src="imagens/imagem-teste1.png">
-                            <div class="conteudo-secundario-projetos-dois-conteudo">
-                                <div class="conteudo-secundario-projetos-dois-conteudo-um">
-                                    <h4 class="conteudo-secundario-projetos-dois-conteudo-um-titulo">Descrição</h4>
-                                </div>
-                                <div class="conteudo-secundario-projetos-dois-conteudo-dois">
-                                    <h4 class="conteudo-secundario-projetos-dois-conteudo-dois-titulo">Links</h4>
-                                    <div class="conteudo-secundario-projetos-dois-conteudo-dois-botoes"></div>
-                                </div>
-                            </div>                        
+                        </div>
                     </div>
-
+                    <div class="swiper-slide conteudo-secundario-projetos-slide">
+                        <img class="conteudo-secundario-projetos-slide-imagem" src="imagens/imagem-teste1.png">
+                        <div class="conteudo-secundario-projetos-slide-conteudo">
+                            <div class="conteudo-secundario-projetos-slide-conteudo-um">
+                                <h4 class="conteudo-secundario-projetos-slide-conteudo-um-titulo">Descrição</h4>
+                                <p class="conteudo-secundario-projetos-slide-conteudo-um-texto">Lorem ipsum dolor sit
+                                    amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                <p></p>
+                            </div>
+                            <div class="conteudo-secundario-projetos-slide-conteudo-dois">
+                                <h4 class="conteudo-secundario-projetos-slide-conteudo-dois-titulo">Links</h4>
+                                <div class="conteudo-secundario-projetos-slide-conteudo-dois-botoess">
+                                    <button class="conteudo-secundario-projetos-slide-conteudo-dois-botoes"><i
+                                            class="fa-solid fa-code"></i>Código fonte</button>
+                                    <button class="conteudo-secundario-projetos-slide-conteudo-dois-botoes"><i
+                                            class="fa-solid fa-file"></i>Documentação</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide conteudo-secundario-projetos-slide">
+                        <img class="conteudo-secundario-projetos-slide-imagem" src="imagens/imagem-teste1.png">
+                        <div class="conteudo-secundario-projetos-slide-conteudo">
+                            <div class="conteudo-secundario-projetos-slide-conteudo-um">
+                                <h4 class="conteudo-secundario-projetos-slide-conteudo-um-titulo">Descrição</h4>
+                            </div>
+                            <div class="conteudo-secundario-projetos-slide-conteudo-dois">
+                                <h4 class="conteudo-secundario-projetos-slide-conteudo-dois-titulo">Links</h4>
+                                <div class="conteudo-secundario-projetos-slide-conteudo-dois-botoess">
+                                    <button class="conteudo-secundario-projetos-slide-conteudo-dois-botoes"><i
+                                            class="fa-solid fa-code"></i>Código fonte</button>
+                                    <button class="conteudo-secundario-projetos-slide-conteudo-dois-botoes"><i
+                                            class="fa-solid fa-file"></i>Documentação</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="swiper-button-prev conteudo-secundario-projetos-botao-esquerdo"></div>
                 <div class="swiper-button-next conteudo-secundario-projetos-botao-direito"></div>
                 <div class="swiper-pagination"></div>
             </div>
         </section>
+
         <section id="conteudo-terciario">
             <div class="conteudo-terciario"></div>
+
         </section>
+
     </main>
-    
+
     <footer id="rodape">
         <div class="rodape">
             <img class="rodape-logo" src="/imagens/logo-principal.png" alt="Minha Logo">
@@ -114,30 +147,8 @@
 
     <script src="/javascript/app.js"></script>
     <script src="/javascript/app2.js"></script>
-    <script src="javascript/app3.js"></script>
-
-        <!-- Swiper JS -->
-        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-        <!-- Initialize Swiper -->
-        <script>
-          var swiper = new Swiper(".mySwiper", {
-            speed: 1000,
-            slidesPerView: 1,
-            spaceBetween: 30,
-            loop: true,
-            pagination: {
-              el: ".swiper-pagination",
-              clickable: true,
-            },
-            navigation: {
-              nextEl: ".swiper-button-next",
-              prevEl: ".swiper-button-prev",
-            },
-          });
-        </script>
-      </body>
-    </html>
+    <script src="/javascript/app3.js"></script>
 
 </body>
+
 </html>
