Estruturando terceira parte

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 </div>
             </div>
             <div class="conteudo-principal-apresentacao-dois">
-                <img class="conteudo-principal-apresentacao-dois-retrato" src="imagens/retrato.png">
-                <h2 class="conteudo-principal-apresentacao-dois-titulo">Sobre mim</h2>
+                <img class="conteudo-principal-apresentacao-dois-retrato" src="">
+                <h2 class="conteudo-principal-apresentacao-dois-titulo">SOBRE MIM</h2>
                 <p class="conteudo-principal-apresentacao-dois-texto">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide conteudo-secundario-projetos-slide">
-                        <img class="conteudo-secundario-projetos-slide-imagem" src="imagens/imagem-teste1.png">
+                        <img class="conteudo-secundario-projetos-slide-imagem" src="imagens/imagem-teste-3.png">
                         <div class="conteudo-secundario-projetos-slide-conteudo">
                             <div class="conteudo-secundario-projetos-slide-conteudo-um">
                                 <h4 class="conteudo-secundario-projetos-slide-conteudo-um-titulo">Descrição</h4>
@@ -133,7 +133,105 @@
         </section>
 
         <section id="conteudo-terciario">
-            <div class="conteudo-terciario"></div>
+            <h6 class="conteudo-terciario-titulo">HABILIDADES</h6>
+            <div class="conteudo-terciario">
+                <div class="conteudo-terciario-parte-um">
+                    <div class="conteudo-terciario-parte-um-principal">
+                        <div class="conteudo-terciario-parte-um-principal-tecnologias">
+                            <h5 class="conteudo-terciario-parte-um-principal-tecnologias-titulo">PRINCIPAIS</h5>
+                            <div class="conteudo-terciario-parte-um-principal-tecnologias-sla">
+                                <div class="conteudo-terciario-parte-um-principal-tecnologias-parte-um">
+                                    <div class="conteudo-terciario-parte-um-principal-tecnologias-parte-um-nome">
+                                        <i class="fa-brands fa-html5"></i>HTML
+                                    </div>
+                                    <div class="conteudo-terciario-parte-um-principal-tecnologias-parte-um-nome">
+                                        <i class="fa-brands fa-css3-alt"></i>CSS
+                                    </div>
+                                    <div class="conteudo-terciario-parte-um-principal-tecnologias-parte-um-nome">
+                                        <i class="fa-brands fa-js"></i>JS
+                                    </div>
+                                    <div class="conteudo-terciario-parte-um-principal-tecnologias-parte-um-nome">
+                                        <i class="fa-brands fa-java"></i>Java
+                                    </div>
+                                    <div class="conteudo-terciario-parte-um-principal-tecnologias-parte-um-nome">
+                                        <i class="fa-solid fa-database"></i>DB
+                                    </div>
+                                </div>
+                                <div class="conteudo-terciario-parte-um-principal-tecnologias-parte-um-nivel">
+                                    <div
+                                        class="conteudo-terciario-parte-um-principal-tecnologias-parte-um-nivel-circulos">
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                    </div>
+                                    <div
+                                        class="conteudo-terciario-parte-um-principal-tecnologias-parte-um-nivel-circulos">
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-regular fa-circle"></i>
+                                    </div>
+                                    <div
+                                        class="conteudo-terciario-parte-um-principal-tecnologias-parte-um-nivel-circulos">
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-regular fa-circle"></i>
+                                        <i class="fa-regular fa-circle"></i>
+                                    </div>
+                                    <div
+                                        class="conteudo-terciario-parte-um-principal-tecnologias-parte-um-nivel-circulos">
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                    </div>
+                                    <div
+                                        class="conteudo-terciario-parte-um-principal-tecnologias-parte-um-nivel-circulos">
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-solid fa-circle"></i>
+                                        <i class="fa-regular fa-circle"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="conteudo-terciario-parte-um-principal-conhecimentos">
+                            <div class="conteudo-terciario-parte-um-principal-conhecimentos-frontend">
+
+                            </div>
+                            <div class="conteudo-terciario-parte-um-principal-conhecimentos-backend">
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="conteudo-terciario-parte-dois">
+                    <div class="conteudo-terciario-parte-dois-formacoes">
+                        <h5 class="conteudo-terciario-parte-dois-formacoes-titulo"><i
+                                class="fa-solid fa-graduation-cap"></i>FORMAÇÕES</h5>
+                        <div class="conteudo-terciario-parte-dois-formacoes-conteudo">
+                            <p>Análise e desenvolvimento de sistemas</p>
+                            <p>Universidade UnidomPedro</p>
+                            <p>2020 - 2022</p>
+                        </div>
+                    </div>
+                    <div class="conteudo-terciario-parte-dois-certificacoes">
+                        <h5 class="conteudo-terciario-parte-dois-certificacoes-titulo"><i
+                                class="fa-solid fa-award"></i>CERTIFICAÇÕES</h5>
+                        <div class="conteudo-terciario-parte-dois-formacoes-conteudo">
+
+                        </div>
+                        <div class="conteudo-terciario-parte-dois-formacoes-conteudo">
+
+                        </div>
+                    </div>
+                </div>
 
         </section>
 
@@ -148,6 +246,7 @@
     <script src="/javascript/app.js"></script>
     <script src="/javascript/app2.js"></script>
     <script src="/javascript/app3.js"></script>
+
 
 </body>
 
